查找/删除成员，鉴权功能

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     url: jdbc:mysql://localhost:3306/center
     username: root
     password: 123456
+  session:
+    timeout: 86400 # todo: 意味着什么？
 
 mybatis-plus:
   configuration:
